k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentaiji
  labels:
    app.kubernetes.io/name: opentaiji
    app.kubernetes.io/version: "1.1.0"
